# fall-detect-system

./: .gitignore  DEVICE_CONNECTION_GUIDE.md  ESP32_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  README.md  SYSTEM_STATUS_FINAL.md  TESTING_GUIDE.md  docker-compose.yml  esp32_simulation.py  test_backend.py  validate_firebase.py
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  create_model.py  fly.toml  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_row_level_security.py  0003_app_role_for_rls.py  0004_user_push_token.py  0005_refresh_tokens.py
backend/app/: __init__.py  auth.py  broker.py  config.py  db.py  deps.py  main.py  models.py  observability.py  ratelimit.py  schemas.py  security.py
backend/app/model/: cloud_detector.meta.json  cloud_detector.onnx
backend/app/model_old/: cloud_detector.meta.json
backend/app/routers/: auth.py  contacts.py  devices.py  emergency.py  events.py  health.py  inference.py  retraining.py  users.py
backend/app/services/: audit_service.py  calibration_store.py  detector.py  device_service.py  event_store.py  fcm_service.py  features.py  pairing_service.py  refresh_token_service.py  retraining_store.py  user_service.py
backend/scripts/: integration_smoke.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_event_feed.py  test_models.py  test_personalization.py  test_phase28b.py  test_phase29.py  test_phase32.py  test_ratelimit.py  test_telemetry.py
ml/: DATA.md  README.md  pyproject.toml
ml/artifacts/cloud/: _probe.onnx.data  sample_inference.json
ml/mlruns/1/07290d56540246d990e37f58149a57a4/artifacts/: edge_results.json
ml/mlruns/1/646b842201e4465fb54fb0ed527834f8/artifacts/: edge_results.json
ml/mlruns/1/d419af661ba041738933c7d7a04e48a3/artifacts/: convlstm_tiny_fp32.pt
ml/mlruns/2/5206f38517894e1094abd595f6720a10/artifacts/: cloud_results.json  feature_norm.json
ml/mlruns/2/6a9933b26e9b409c9f5fc0406ecb6598/artifacts/: cloud_results.json  test_predictions.npz
ml/mlruns/2/7d13bdd8b2fd4867a87d631b588ec53a/artifacts/: channel_stats.json  transformer_detector_fp32.pt
ml/mlruns/2/8977252b5eca4697901163a28ffa4d5a/artifacts/: transformer_detector_fp32.pt
ml/mlruns/2/8c5178e0d12840f584f4406f018a4c15/artifacts/: channel_stats.json
ml/mlruns/2/e3356659f1544f9e80ed1fee0777a82e/artifacts/: transformer_detector_fp32.pt
ml/mlruns/phase-20-local/1/051e423821d74c20957f79628312c979/artifacts/: edge_results.json
ml/mlruns/phase-20-local/1/07290d56540246d990e37f58149a57a4/artifacts/: channel_stats.json  convlstm_tiny_fp32.pt
ml/mlruns/phase-20-local/1/20d942327be54a7e927b0af4b206b192/artifacts/: convlstm_tiny_fp32.pt
ml/mlruns/phase-20-local/1/4424f83efee7465c9022a0bcc3bec8cb/artifacts/: convlstm_tiny_fp32.pt
ml/mlruns/phase-20-local/1/56227f475a9e4bf4b3bbf7ef8219b450/artifacts/: convlstm_tiny_fp32.pt  edge_results.json
ml/mlruns/phase-20-local/1/646b842201e4465fb54fb0ed527834f8/artifacts/: channel_stats.json
ml/mlruns/phase-20-local/1/8abb4aeb17204dfdb195565b1be9982a/artifacts/: convlstm_tiny_fp32.pt
ml/mlruns/phase-20-local/1/c3966cd030364e4f815293fafb2645b9/artifacts/: convlstm_tiny_fp32.pt
ml/mlruns/phase-20-local/1/d0f2542fd6ba4fa0b50f0603cf8eaf1a/artifacts/: channel_stats.json  convlstm_tiny_fp32.pt
ml/mlruns/phase-20-local/1/d419af661ba041738933c7d7a04e48a3/artifacts/: edge_results.json
ml/mlruns/phase-20-local/2/51ed57eef3c34316bc044d316714cfc3/artifacts/: channel_stats.json  transformer_detector_fp32.pt
ml/mlruns/phase-20-local/2/5206f38517894e1094abd595f6720a10/artifacts/: channel_stats.json
ml/mlruns/phase-20-local/2/664d3403755b4d1ba14dc04e0f1a042b/artifacts/: cloud_results.json
ml/mlruns/phase-20-local/2/7d13bdd8b2fd4867a87d631b588ec53a/artifacts/: cloud_results.json  sample_inference.json
ml/mlruns/phase-20-local/2/8977252b5eca4697901163a28ffa4d5a/artifacts/: feature_norm.json
ml/mlruns/phase-20-local/2/8c5178e0d12840f584f4406f018a4c15/artifacts/: cloud_results.json  feature_norm.json  sample_inference.json
ml/mlruns/phase-20-local/2/e3356659f1544f9e80ed1fee0777a82e/artifacts/: channel_stats.json  feature_norm.json
ml/mlruns/phase-30-colab/1/051e423821d74c20957f79628312c979/artifacts/: convlstm_tiny_fp32.pt
ml/mlruns/phase-30-colab/1/20d942327be54a7e927b0af4b206b192/artifacts/: edge_results.json
ml/mlruns/phase-30-colab/1/4424f83efee7465c9022a0bcc3bec8cb/artifacts/: edge_results.json
ml/mlruns/phase-30-colab/1/646b842201e4465fb54fb0ed527834f8/artifacts/: convlstm_tiny_fp32.pt
ml/mlruns/phase-30-colab/1/8abb4aeb17204dfdb195565b1be9982a/artifacts/: edge_results.json
ml/mlruns/phase-30-colab/1/c3966cd030364e4f815293fafb2645b9/artifacts/: edge_results.json
ml/mlruns/phase-30-colab/1/d0f2542fd6ba4fa0b50f0603cf8eaf1a/artifacts/: edge_results.json
ml/mlruns/phase-30-colab/1/e7d3967ca4094ecf907bb156256d6499/artifacts/: convlstm_tiny_fp32.pt  edge_results.json
ml/mlruns/phase-30-colab/1/fb9bc84f49164bc79d7fb2f796440495/artifacts/: edge_results.json
ml/mlruns/phase-30-colab/2/51ed57eef3c34316bc044d316714cfc3/artifacts/: cloud_results.json  feature_norm.json  (+1 more)
ml/mlruns/phase-30-colab/colab-script/: fallguardian-phase-30-5-fold-cross-validation.ipynb
ml/notebooks/: 01_eda.ipynb
ml/scripts/: build_eda_notebook.py  cascade_eval.py  continuous_wear_sim.py  diagnose_cloud.py  export_cloud_onnx.py  export_tflite.py  tflite_to_header.py  validate_tflite.py
ml/src/fall_guardian_ml/datasets/: cli.py  cloud_dataset.py  edge_dataset.py  pre_impact_labels.py  smartfall_adl.py  weda_fall.py
ml/src/fall_guardian_ml/eval/: benchmark.py  metrics.py  onnx_export.py  quantize.py
ml/src/fall_guardian_ml/features/: extraction.py  normalization.py  windowing.py
ml/src/fall_guardian_ml/models/: convlstm_tiny.py  transformer_detector.py
ml/src/fall_guardian_ml/training/: augment.py  cli.py  cross_validate.py  train_cloud.py  train_edge.py
ml/tests/: test_cloud_dataset.py  test_features.py  test_pre_impact_labels.py  test_transformer_detector.py
(+112 files in other folders)
