[project]
name = "fall-guardian-backend"
version = "0.2.0"
description = "Fall Guardian — FastAPI cloud gateway + detection service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Devendra Gurav", email = "prasad.gurav09@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Cloud detector serving: run the exported Transformer (ONNX) torch-free.
    "numpy>=1.26",
    "onnxruntime>=1.18",
    # Persistence: async SQLAlchemy 2.0 over asyncpg + Alembic migrations.
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Auth: HS256 JWTs + bcrypt password hashing.
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    # Redis: rate limiting (+ later SSE pub/sub for the caregiver feed).
    "redis>=5.0",
    # FCM push notifications (optional — no-op without FG_FIREBASE_CREDENTIALS).
    "google-auth>=2.29",
    "httpx>=0.27",
    # Observability: structured JSON logging with a per-request trace_id (Phase 32).
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",        # FastAPI TestClient transport
    "ruff>=0.6",
]
# Better Stack (Logtail) log drain. Optional — without it, logs are JSON-on-stdout
# (read from the console / `docker compose logs`). Install when FG_BETTER_STACK_TOKEN is set.
observability = [
    "logtail-python>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
